@@ -61,6 +61,9 @@ Next version (tbd):
 - GPR#810: check for integer overflow in Array.concat
   (Jeremy Yallop)
 
+- GPR#805, GPR#815, GPR#833: check for integer overflow in String.concat
+  (Jeremy Yallop,
+   review by Damien Doligez, Alain Frisch, Daniel Bünzli, Fabrice Le Fessant)
 
 OCaml 4.04.0:
 -------------
